--- a/index.html
+++ b/index.html
@@ -367,19 +367,19 @@
         <div class="notice">
             <ul>
                 <li class="news-lists">
-                    <a href="./news-detail.html?id=1">【重要通知】中元节冥币兑换特别通道已开启</a>
+                    <a href="./news-detail.html">【重要通知】中元节冥币兑换特别通道已开启</a>
                 </li>
                 <li class="news-lists">
-                    <a href="./news-detail.html?id=2">天地银行新版"亿万元"冥币正式发行</a>
+                    <a href="./news-detail.html">天地银行新版"亿万元"冥币正式发行</a>
                 </li>
                 <li class="news-lists">
-                    <a href="./news-detail.html?id=3">地府信贷推出"往生无忧"还款计划</a>
+                    <a href="./news-detail.html">地府信贷推出"往生无忧"还款计划</a>
                 </li>
                 <li class="news-lists">
-                    <a href="./news-detail.html?id=4">清明节期间阴阳转账手续费全免</a>
+                    <a href="./news-detail.html">清明节期间阴阳转账手续费全免</a>
                 </li>
                 <li class="news-lists">
-                    <a href="./news-detail.html?id=5">天地银行荣获"冥界最佳金融机构"称号</a>
+                    <a href="./news-detail.html">天地银行荣获"冥界最佳金融机构"称号</a>
                 </li>
             </ul>
         </div>
