--- a/news.html
+++ b/news.html
@@ -329,7 +329,7 @@
                 <!-- 新闻条目2 -->
                 <div class="bg-gray-800 p-6 rounded-xl shadow-lg hover:shadow-yellow-500/20 transition-all duration-300 border border-yellow-900">
                     <h3 class="text-xl font-bold mb-2 text-yellow-400">天地银行新版"亿万元"冥币正式发行</h3>
-                    <p class="text-gray-400 mb-4">发布时间：2025-08-10</p>
+                    <p class="text-gray-400 mb-4">发布时间：2024-08-10</p>
                     <p class="text-gray-300">全新防伪亿万元大额冥币上市，采用幽冥加密技术，满足大宗祭祀与地府投资需求，即日起各分行可兑换。</p>
                     <a href="./news-detail1.html" class="mt-4 inline-block text-yellow-400 hover:underline">查看详情 →</a>
                 </div>
@@ -337,7 +337,7 @@
                 <!-- 新闻条目3 -->
                 <div class="bg-gray-800 p-6 rounded-xl shadow-lg hover:shadow-yellow-500/20 transition-all duration-300 border border-yellow-900">
                     <h3 class="text-xl font-bold mb-2 text-yellow-400">地府信贷推出"往生无忧"还款计划</h3>
-                    <p class="text-gray-400 mb-4">发布时间：2025-08-05</p>
+                    <p class="text-gray-400 mb-4">发布时间：2024-08-05</p>
                     <p class="text-gray-300">全新专项还款援助计划，支持延长周期/利息减免，助您轻装转世轮回。凭功德记录可享阶梯优惠。</p>
                     <a href="./news-detail2.html" class="mt-4 inline-block text-yellow-400 hover:underline">查看详情 →</a>
                 </div>
@@ -345,7 +345,7 @@
                 <!-- 新闻条目4 -->
                 <div class="bg-gray-800 p-6 rounded-xl shadow-lg hover:shadow-yellow-500/20 transition-all duration-300 border border-yellow-900">
                     <h3 class="text-xl font-bold mb-2 text-yellow-400">清明节期间阴阳转账手续费全免</h3>
-                    <p class="text-gray-400 mb-4">发布时间：2025-07-28</p>
+                    <p class="text-gray-400 mb-4">发布时间：2024-07-28</p>
                     <p class="text-gray-300">2026年清明特惠：所有阳间至阴间转账免手续费，零成本传递孝心与财富，请提前规划善用此期。</p>
                     <a href="./news-detail3.html" class="mt-4 inline-block text-yellow-400 hover:underline">查看详情 →</a>
                 </div>
@@ -353,7 +353,7 @@
                 <!-- 新闻条目5 -->
                 <div class="bg-gray-800 p-6 rounded-xl shadow-lg hover:shadow-yellow-500/20 transition-all duration-300 border border-yellow-900">
                     <h3 class="text-xl font-bold mb-2 text-yellow-400">天地银行荣获"冥界最佳金融机构"称号</h3>
-                    <p class="text-gray-400 mb-4">发布时间：2025-07-20</p>
+                    <p class="text-gray-400 mb-4">发布时间：2024-07-20</p>
                     <p class="text-gray-300">获十殿阎罗联合授予最高荣誉，表彰我行在跨阴阳服务、风险管控及金融创新的卓越成就。</p>
                     <a href="./news-detail4.html" class="mt-4 inline-block text-yellow-400 hover:underline">查看详情 →</a>
                 </div>
@@ -361,9 +361,16 @@
                 <!-- 新闻条目6 -->
                 <div class="bg-gray-800 p-6 rounded-xl shadow-lg hover:shadow-yellow-500/20 transition-all duration-300 border border-yellow-900">
                     <h3 class="text-xl font-bold mb-2 text-yellow-400">新版冥界通APP上线公告</h3>
-                    <p class="text-gray-400 mb-4">发布时间：2025-07-15</p>
+                    <p class="text-gray-400 mb-4">发布时间：2025-01-10</p>
                     <p class="text-gray-300">天地银行官方APP"冥界通"3.0版本上线，新增阴阳实时汇率查询、云端祭祀、冥币防伪验证等功能。</p>
                     <a href="./news-detail5.html" class="mt-4 inline-block text-yellow-400 hover:underline">查看详情 →</a>
+                </div>
+                <!-- 新闻条目7 -->
+                <div class="bg-gray-800 p-6 rounded-xl shadow-lg hover:shadow-yellow-500/20 transition-all duration-300 border border-yellow-900">
+                    <h3 class="text-xl font-bold mb-2 text-yellow-400">天地银行成员公示</h3>
+                    <p class="text-gray-400 mb-4">发布时间：2025-06-15</p>
+                    <p class="text-gray-300">银行的组织架构和核心成员信息…</p>
+                    <a href="./news-detail25.html" class="mt-4 inline-block text-yellow-400 hover:underline">查看详情 →</a>
                 </div>
             </div>
         </div>
